--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.3",
     "firebase": "^11.3.1",
     "firebase-admin": "^11.11.1",
+    "jsonwebtoken": "^9.0.2",
     "localtunnel": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
