--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "build": "npm install",
-    "dev": "nodemon index.js"
+    "build": "npm install && npm run compile",
+    "dev": "nodemon index.js",
+    "compile": "tsc"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -15,7 +16,6 @@
     "express": "^4.18.3",
     "firebase": "^11.3.1",
     "firebase-admin": "^11.11.1",
-    "jsonwebtoken": "^9.0.2",
     "localtunnel": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
