--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dns": "^0.2.2",
     "dotenv": "^16.4.5",
     "email-validator": "^2.0.4",
     "express": "^4.18.3",
@@ -18,7 +17,8 @@
     "localtunnel": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "jose": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
