--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "build": "npm install",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test:email": "node tests/testEmailService.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -14,11 +15,12 @@
     "express": "^4.18.3",
     "firebase": "^11.3.1",
     "firebase-admin": "^11.11.1",
+    "jose": "^4.0.0",
     "localtunnel": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
-    "util": "^0.12.5",
-    "jose": "^4.0.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
